# prompto

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
deploy/: env.example  install.sh  prompto.service  prompto.toml.example
src/: advisor.rs  apytti_client.rs  baselines.rs  batch.rs  claudemgr.rs  diagnose.rs  files.rs  host.rs  inventory.rs  lib.rs  main.rs  mcp.rs  mcpprobe.rs  portscan.rs  router.rs  rsync.rs  script.rs  ssh.rs  virt.rs  wol.rs
src/filters/: cargo.rs  git.rs  k8s.rs  mod.rs  node.rs  ops.rs  pkg.rs  python.rs  rsync.rs  sys.rs  system.rs  zfs.rs
tests/: integration.rs
